sandbox/output
NumberParserTest.java:10: error: cannot find symbol
        Spliter spliter = mock(Spliter.class); 
        ^
  symbol:   class Spliter
  location: class NumberParserTest
NumberParserTest.java:10: error: cannot find symbol
        Spliter spliter = mock(Spliter.class); 
                               ^
  symbol:   class Spliter
  location: class NumberParserTest
2 errors
